--- a/anfisa_for_friends/templates/homepage/index.html
+++ b/anfisa_for_friends/templates/homepage/index.html
@@ -7,10 +7,11 @@
   <!-- {{ ice_cream_list }} -->
   {% for ice_cream in ice_cream_list %}
     <ul>
-      <li>ID: {{ ice_cream.id }}</li>
       <!-- <li>Опубликовано: {{ ice_cream.is_published }}</li> -->
       <!-- <li>На главную: {{ ice_cream.is_on_main }}</li> -->
-      <li>Название: {{ ice_cream.title }}</li>
+      <li><h3>Название: {{ ice_cream.title }}</h3></li>
+      <li>ID: {{ ice_cream.id }}</li>
+      <li>{{ ice_cream.description }}</li>
       <!-- <li>Описание: {{ ice_cream.description }}</li> -->
       <!-- <li>FK wrapper: {{ ice_cream.wrapper_id }}</li> -->
       <!-- <li>FK category: {{ ice_cream.category_id }}</li> -->
